<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">RadioDroid</string>
    
    <string name="detail_tags">Tags</string>
    <string name="detail_id">internal station id (pos./neg. votes)</string>
    <string name="detail_country">Country</string>
    <string name="detail_language">Language</string>
    <string name="detail_weblink">Homepage</string>
    <string name="detail_stream_url_title">Stream</string>
    <string name="detail_play">PLAY</string>
    <string name="detail_stop">PAUSE</string>
    <string name="detail_exit">EXIT</string>
    
    <!-- Option menu items -->
    <string name="exit_app">exit %1$s</string>
    <string name="stop_and_exit_app">stop &amp; exit %1$s</string>
    <string name="stop_playing">stop playing</string>
    <string name="top_votes">top votes</string>
    <string name="top_clicks">top clicks</string>
    <string name="all_stations">all stations</string>
    <string name="search_stations">search stations</string>
    <string name="settings">settings</string>
    
    <string name="no_wifi_connection">No WiFi/WLAN connection available.&lt;br>%1$s cannot be started.&lt;br>Please activate your WiFi (WLAN) connection.</string>
    <string name="no_network_connection">No network (WiFi/WLAN/GPRS/UMTS) available.&lt;br>%1$s cannot be started.&lt;br>Please activate your WiFi (WLAN) connection.</string>
    <string name="auto_complete_stations">Search stations</string>
    <string name="notify_server_about_play_click">Station click is counted on the server (station id %1$s).</string>
    
    <string-array name="stationList">
   		<item >Black</item>
        <item >White</item>
        <item >Red</item>
        <item >Blue</item>
        <item >Blue White</item>
        <item >Blue Yellow</item>
        <item >Blue Red</item>
        <item >Blue Green</item>
        <item >Blue Pink</item>
        <item >Yellow</item>
        <item >Green</item>
        <item >Brown</item>
        <item >Pink</item>
        <item >Orange</item>
        <item >Purple</item>
    </string-array>
    
    <!-- About application activity items -->
    <string name="about__title_version">Version</string>
    <string name="about__title_changelog">List of changes</string>
    <string name="about__title_communityradio">Radio station list webpage</string>
    <string name="about__title_source_code">Source code</string>
    <string name="about__title_license">License</string>
    
    <!--  Application preferences activity -->
    <string name="preferences__settings_category_title">Settings</string>

    <string name="preferences__autoplay_settings_title">Last station on start &#8230;</string>
    <string name="preferences__autoplay_settings_summary">When the App is started &#8230;</string>
    <string name="preferences__autoplay_play">play last station</string>
    <string name="preferences__autoplay_last_status">play or pause last station (last mode)</string>
    <string name="preferences__autoplay_pause">pause last station</string>
    <string name="preferences__autoplay_none">show the station list</string>
    
    <string name="preferences__refresh_station_list_title">Always refresh lists</string>
    <string name="preferences__refresh_station_list_summary">Whether station lists are updated on every view or only when the App is started (may be costly)</string>
    
    <string name="preferences__network_settings_title">Network settings</string>
    <string name="preferences__network_settings_summary">Allow or deny mobile connections</string>
    <string name="preferences__wifi_only">WiFi/WLAN only</string>
    <string name="preferences__wifi_and_umts">WiFi/WLAN and GPRS/UMTS</string>
    <string name="preferences__umts_only">GPRS/UMTS only</string>
  
    <string name="preferences__privacy_settings_category_title">Privacy settings</string>
    <string name="preferences__notify_server_about_play_click_title">Count station clicks</string>
    <string name="preferences__notify_server_about_play_click_summary">Allow the server to count when you play a station: the App sends an anonymous \"clicked\" signal back to the server.</string>

    <string name="preferences__app_controls_category_title">Application controls</string>
    <string name="preferences__exit_application">Exit application</string>
    <string name="preferences__stop_playing">Stop playing</string>
    
    <string name="preferences__station_lists">Station lists</string>
    <string name="preferences__top_votes">Top votes</string>
    <string name="preferences__top_clicks">Top clicks</string>
    <string name="preferences__all_stations">All stations</string>
    <string name="preferences__community_radio">Radio station list webpage</string>
    <string name="preferences__search_stations">Search Stations</string>
    <string name="preferences__about_application_category_title">About</string>
    <string name="preferences__version">Version</string>
                
    <string name="loading_station_details_from_server">Loading station details from the server</string>
    <string name="loading_station_list_from_server">Updating the station list from the server</string>
    
</resources>