<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
	<PreferenceCategory android:key="pref_key_settings" android:title="@string/preferences__about_application_category_title">
    
	    <CheckBoxPreference android:defaultValue="true"
                            android:key="pref_toggle_play_last_station_on_restart"
                            android:title="@string/preferences__play_last_station_on_restart_title"
                            android:summary="@string/preferences__play_last_station_on_restart_summary"/>
	    
        <CheckBoxPreference android:defaultValue="true"
                            android:key="pref_toggle__allow_gprs_umts"
                            android:title="@string/preferences__allow_gprs_umts_title"
                            android:summary="@string/preferences__allow_gprs_umts_summary"/>
	 </PreferenceCategory>
        	    
     <PreferenceCategory android:key="pref_key_privacy_settings" android:title="@string/preferences__privacy_settings_category_title">
        <CheckBoxPreference android:defaultValue="false"
                            android:key="pref_toggle_notify_server_about_play_click"
                            android:title="@string/preferences__notify_server_about_play_click_title"
                            android:summary="@string/preferences__notify_server_about_play_click_summary"/>
	    
     </PreferenceCategory>
        	    
     <PreferenceCategory android:key="pref_key_app_controls" android:title="@string/preferences__app_controls_category_title">
        
        <Preference android:key="pref_key_stop_playing"
                    android:title="@string/preferences__stop_playing"/>
        
    	<Preference android:key="pref_key_top_votes"
                    android:title="@string/preferences__top_votes"/>
    	
	  	<Preference android:key="pref_key_top_clicks"
                    android:title="@string/preferences__top_clicks"/>
	  	
        <Preference android:key="pref_key_all_stations"
                    android:title="@string/preferences__all_stations"/>
        
	    <Preference android:key="pref_key_search_stations"
                    android:title="@string/preferences__search_stations"/>
                        	    	    	    
    	<net.programmierecke.radiodroid.preferences.AboutApplicationPreference
    	    android:key="pref_key_about_application_version"
        	android:title="@string/preferences__version" />
    	
    </PreferenceCategory>
    	
</PreferenceScreen>
