<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/stationdetail_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_id"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/stationdetail_id_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/stationdetail_tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_tags"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/stationdetail_tags_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/stationdetail_country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_country"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/stationdetail_country_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/stationdetail_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_language"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/stationdetail_language_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />

    <LinearLayout
        android:id="@+id/stationdetail_homepage_url_clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stationdetail_homepage_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_weblink"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stationdetail_homepage_url_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

   <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />
 
    <TextView
            android:id="@+id/detail_stream_url_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_stream_url_title"
            android:textSize="12sp" />

    <TextView
            android:id="@+id/detail_stream_url_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#dcdcdc" />
    
    <Button
        android:id="@+id/detail_button_play"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:background="@color/lime"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/detail_play" />

    <Button
        android:id="@+id/detail_button_stop"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:background="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/detail_stop" />

</LinearLayout>